--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --open --mode development --hot",
     "build": "cross-env NODE_ENV=production webpack --mode production",
-    "test": "cross-env NODE_ENV=testing jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=testing jest --config=jest.config.js",
     "heroku-postbuild": "yarn run build",
     "precommit": "lint-staged",
     "commit": "git-cz"
@@ -53,10 +53,12 @@
     "webpack": "^4.20.2"
   },
   "devDependencies": {
+    "babel-7-jest": "^21.3.3",
     "clean-webpack-plugin": "^0.1.19",
     "commitizen": "^2.10.1",
     "cz-conventional-changelog": "^2.1.0",
     "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "^3.3.4",
     "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -69,6 +71,8 @@
     "jest": "^23.6.0",
     "lint-staged": "^7.3.0",
     "prettier": "^1.14.3",
+    "react-test-renderer": "^16.5.2",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.8"
   },
